Change get data

--- a/src/beer-account-frame.html
+++ b/src/beer-account-frame.html
@@ -234,11 +234,11 @@
           <div hidden$="[[!json]]">[[sourceUrl]]</div>
 
         </div>
-        <div class="frame-directions">[[typeMessage]]</div>
+        <!-- <div class="frame-directions">[[typeMessage]]</div> -->
 
-        <iframe width="100%" frameBorder="0" height="[[height]] px" src="[[sourceUrl]]">
+        <!-- <iframe width="100%" frameBorder="0" height="[[height]] px" src="[[sourceUrl]]">
 
-        </iframe>
+        </iframe> -->
 
       </div>
     
