--- a/src/beer-beer-add.html
+++ b/src/beer-beer-add.html
@@ -197,6 +197,7 @@
 
         <paper-textarea 
           id="description"
+          always-float-label
           label="Beer Description" 
           char-counter 
           maxlength="500" 
