--- a/src/beer-crawl-dialog.html
+++ b/src/beer-crawl-dialog.html
@@ -223,7 +223,7 @@
             
             <beer-crawl-add
               opened
-              place = "[[editPlace]]"
+              organization = "[[editPlace]]"
               message = "{{crawlMessage}}">
             </beer-crawl-add>
             
