--- a/src/beer-tap-edit.html
+++ b/src/beer-tap-edit.html
@@ -101,7 +101,7 @@
       </template>
 
        <paper-input label="Motto" value="{{category.motto}}"maxlength=100 char-counter></paper-input>
-      <paper-textarea label="Description" value="{{category.description}}" maxlength=2000 char-counter></paper-textarea>
+      <paper-textarea always-float-label label="Description" value="{{category.description}}" maxlength=2000 char-counter></paper-textarea>
   
   </template>
   <script>
